# TuraAgent_Web3_New

./: .gitignore  index.html  script.js  styles.css
backend/: README.md  pyproject.toml  setup.py
backend/contracts/: MyToken.sol  check_balance.py  compile_my_token.py  deploy_my_token.py  verify_deployment.py
tura-wallet/: .env  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
tura-wallet/api/: process-message.ts
tura-wallet/src/: App.css  App.tsx  env.d.ts  main.tsx
tura-wallet/src/agentic_workflow/: AgentManager.ts  AgenticWorkflow.ts  MockAgentManager.ts  MockWalletAgent.ts  TokenAgent.ts  TuraWorkFlow.ts  TuraWorkflow.ts  WalletAgent.ts
tura-wallet/src/agents/: WalletAgent.ts
tura-wallet/src/components/: TopBar.tsx
tura-wallet/src/contracts/: MyToken.ts  TuraAgent.sol  TuraAgent.ts
tura-wallet/src/hooks/: use-toast.ts  useSessionTimeout.ts
tura-wallet/src/lib/: agentStorage.ts  config.ts  customProvider.ts  keyManager.ts  key_transmitter.ts  virtual-wallet-system.ts  wallet.ts  wallet_manager.ts
tura-wallet/src/scripts/: deploy_tura_agent.js  verify_tura_agent.js
tura-wallet/src/stores/: agent-store.ts  store-econ.ts
tura-wallet/test/: check_balance.html  create_test_wallet.html  simple_wallet_test.html  wallet_backend_test.ts  wallet_integration_test.ts  wallet_manager_test.html  wallet_test.html  wallet_test_simple.html  web3_test.html
(+63 files in other folders)
